--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<table id="example" class="table table-striped" style="width:100%">
 			<thead>
 				<tr>
-					<th>索引</th>
+					<th style="display:none">索引</th>
 					<th>地城名</th>
 					<th>經驗Tier</th>
 					<th>雕紋Tier</th>
@@ -29,7 +29,7 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td>1</td>
+					<td style="display:none">1</td>
 					<td>目盲洞穴</td>
 					<td>A</td>
 					<td>B</td>
@@ -37,7 +37,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>2</td>
+					<td style="display:none">2</td>
 					<td>古拉恩運河</td>
 					<td>B</td>
 					<td>A</td>
@@ -45,7 +45,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>3</td>
+					<td style="display:none">3</td>
 					<td>奧德林地</td>
 					<td>B</td>
 					<td>B</td>
@@ -53,7 +53,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>4</td>
+					<td style="display:none">4</td>
 					<td>巨鎚林地</td>
 					<td>C</td>
 					<td>B</td>
@@ -61,7 +61,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>5</td>
+					<td style="display:none">5</td>
 					<td>雷斯溫荒野</td>
 					<td>B</td>
 					<td>B</td>
@@ -69,7 +69,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>6</td>
+					<td style="display:none">6</td>
 					<td>沉沒遺跡</td>
 					<td>B</td>
 					<td>C</td>
@@ -77,7 +77,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>7</td>
+					<td style="display:none">7</td>
 					<td>巫水</td>
 					<td>C</td>
 					<td>B</td>
@@ -85,7 +85,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>8</td>
+					<td style="display:none">8</td>
 					<td>失落秘庫</td>
 					<td>C</td>
 					<td>C</td>
@@ -93,7 +93,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>9</td>
+					<td style="display:none">9</td>
 					<td>惡魔烙痕</td>
 					<td>C</td>
 					<td>D</td>
@@ -101,7 +101,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>10</td>
+					<td style="display:none">10</td>
 					<td>大地之殤</td>
 					<td>D</td>
 					<td>C</td>
@@ -109,7 +109,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>11</td>
+					<td style="display:none">11</td>
 					<td>邪教徒避難所</td>
 					<td>E</td>
 					<td>C</td>
@@ -117,7 +117,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>12</td>
+					<td style="display:none">12</td>
 					<td>勇士之歿</td>
 					<td>C</td>
 					<td>E</td>
@@ -125,7 +125,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>13</td>
+					<td style="display:none">13</td>
 					<td>低語松林</td>
 					<td>C</td>
 					<td>E</td>
@@ -133,7 +133,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>14</td>
+					<td style="display:none">14</td>
 					<td>穹頂</td>
 					<td>D</td>
 					<td>E</td>
@@ -141,7 +141,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>15</td>
+					<td style="display:none">15</td>
 					<td>毒蛇巢穴</td>
 					<td>E</td>
 					<td>D</td>
@@ -149,7 +149,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>16</td>
+					<td style="display:none">16</td>
 					<td>墨根工坊</td>
 					<td>F</td>
 					<td>C</td>
@@ -157,7 +157,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>17</td>
+					<td style="display:none">17</td>
 					<td>暗影墜落處</td>
 					<td>D</td>
 					<td>E</td>
@@ -165,7 +165,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>18</td>
+					<td style="display:none">18</td>
 					<td>廢棄的礦道</td>
 					<td>D</td>
 					<td>E</td>
@@ -173,7 +173,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>19</td>
+					<td style="display:none">19</td>
 					<td>先祖輓歌</td>
 					<td>D</td>
 					<td>E</td>
@@ -181,7 +181,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>20</td>
+					<td style="display:none">20</td>
 					<td>黑暗深谷</td>
 					<td>E</td>
 					<td>D</td>
@@ -189,7 +189,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>21</td>
+					<td style="display:none">21</td>
 					<td>古拉恩貧民窟</td>
 					<td>E</td>
 					<td>D</td>
@@ -197,7 +197,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>22</td>
+					<td style="display:none">22</td>
 					<td>叛徒藏身處</td>
 					<td>E</td>
 					<td>E</td>
@@ -205,7 +205,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>23</td>
+					<td style="display:none">23</td>
 					<td>西弗塔廢墟</td>
 					<td>F</td>
 					<td>D</td>
@@ -213,7 +213,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>24</td>
+					<td style="display:none">24</td>
 					<td>科卓岡兵營</td>
 					<td>D</td>
 					<td>F</td>
@@ -221,7 +221,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>25</td>
+					<td style="display:none">25</td>
 					<td>聖教軍大教堂</td>
 					<td>F</td>
 					<td>D</td>
@@ -229,7 +229,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>26</td>
+					<td style="display:none">26</td>
 					<td>黑瑪瑙堡</td>
 					<td>D</td>
 					<td>F</td>
@@ -237,7 +237,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>27</td>
+					<td style="display:none">27</td>
 					<td>卡爾蒂姆監獄</td>
 					<td>F</td>
 					<td>E</td>
@@ -245,7 +245,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>28</td>
+					<td style="display:none">28</td>
 					<td>黑色收容所</td>
 					<td>E</td>
 					<td>F</td>
@@ -253,7 +253,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>29</td>
+					<td style="display:none">29</td>
 					<td>密議</td>
 					<td>E</td>
 					<td>F</td>
@@ -261,7 +261,7 @@
 					<td>2023/07/17</td>
 				</tr>
 				<tr>
-					<td>30</td>
+					<td style="display:none">30</td>
 					<td>野性巢穴</td>
 					<td>F</td>
 					<td>E</td>
