fix missing changes

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 			</tbody>
 			<tfoot>
 				<tr>
-					<th>索引</th>
+					<th style="display:none">索引</th>
 					<th>地城名</th>
 					<th>經驗Tier</th>
 					<th>雕紋Tier</th>
