update the help message

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</script>
 	</head>
 	<body>
-		<p class="text-start">The order of this ranking is A > B > C > D > E > F</p>
+		<p class="text-start">The order of this ranking is A > B > C > D > E > F, A~C is good map for user</p>
 		
 		<table id="example" class="table table-striped" style="width:100%">
 			<thead>
