--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			</tbody>
 			<tfoot>
 				<tr>
-					<th style="display:none">索引</th><th>地城名</th><th>經驗Tier</th><th>雕紋Tier</th><th>綜合Tier</th><th>新增日期</th>
+					<th style="display:none">索引</th><th>地城名</th><th>經驗Tier</th><th>雕紋Tier</th><th>團隊Tier</th><th>新增日期</th>
 				</tr>
 			</tfoot>
 		</table>
