--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 		<script type="text/javascript" src="js/d4_utils.js"></script>  
 		<script>
 			$(document).ready(function(){
-				update_s0_data();
-				update_s1_data();
-				
+				//update_s0_data();
+				//update_s1_data();
+				debug_s0();
+				debug_s1();
 				//show the target table
 				$('input[type="radio"]').on('change', function() {
 					hide_tables();
